--- a/learning-haskell.cabal
+++ b/learning-haskell.cabal
@@ -57,7 +57,7 @@ executable learning-haskell
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.9 && <4.13
+  -- build-depends:       base >=4.9 && <4.13
   
   -- Directories containing source files.
   hs-source-dirs:      .
