--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -17,7 +17,10 @@ jobs:
       with:
         ghc-version: '8.8.2'
         cabal-version: '3.0'
-
+    
+    - name: Haskell Linter
+      uses: domdere/haskell-lint-action@v1.0.2
+      
     - name: Cache
       uses: actions/cache@v1
       env:
